<resources>
    <string name="app_name">Pass On</string>
    <string name="get_it">Get it</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="bookName">bookname</string>
    <string name="filter1">filter1</string>
    <string name="filter2">filter2</string>
    <string name="date">date</string>
    <string name="enterData">Enter Text</string>
    <string name="chat">chat</string>
    <string name="prompt_email">Email</string>
    <string name="forgot_password"><b>Forgot Password?</b></string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_send">Send</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="registerFail">Registration failed</string>
    <string name="forgotPasswordEnterEmail">Enter your email first</string>
    <string name="registerSuccess">Registration successful</string>
    <string name="Saved">saved</string>
    <string name="profile">profile</string>
    <string name="request_sent">request sent</string>
    <string name="app_intention">The app Pass On is intended to help the needy to get books for free and for those who want to donate their books to help the people.</string>
    <string name="book_post_info">Through this app those who want their books to be handed over to others can post details about their books.</string>
    <string name="about_the_app">About the App</string>
    <string name="book_request_info">The app also allows the needy to post their requests so that their request can be processed</string>
    <string-array name="subject_spinner">
        <item>Select Subject</item>
        <item>Physics</item>
        <item>Chemistry</item>
        <item>Biology</item>
        <item>General Science</item>
        <item>History</item>
        <item>Civics</item>
        <item>Geography</item>
        <item>Social Sciences</item>
        <item>Mathematics</item>
        <item>Commerce</item>
        <item>English</item>
        <item>Hindi</item>
        <item>Computer Science</item>
        <item>Second Languages</item>
        <item>Non-acamedics</item>
        <item>Others</item>
    </string-array>
    <string-array name="class_spinner">
        <item>Select Class</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>Engineering</item>
        <item>Medical</item>
        <item>Competitive</item>
        <item>Others</item>
    </string-array>
    <string name="camera_not_supported">camera not found</string>
</resources>
