<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.passon.BookPostActivity">


    <LinearLayout
        android:id="@+id/inputData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <EditText
            android:id="@+id/edit4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bookName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edit5"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/filter1" />

            <EditText
                android:id="@+id/edit6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/filter2" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/requestButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="request" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>

